# xpu-perf

./: .gitignore  .gitmodules  App.tsx  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FINAL_STATUS_REPORT.md  Makefile  NEW_PROFILER_STATUS.md  ORIGINAL_VS_NEW_COMPARISON.md  README.md  gpu_trace.folded  pytorch.folded  vectoradd.folded
.github/workflows/: docker.yml  publish.yml
AnalyzerEngine/: index.ts
ControlCenter/: index.ts
ControlCenter/AnalyzerControls/: AnalyzerControlPanel.tsx  index.ts
DataManager/: index.ts
DataManager/DataProcessor/: index.ts
DataManager/DataStore/: configStore.ts  dataStore.ts  index.ts  interactionStore.ts
LayoutManager/: index.ts
LayoutManager/AppShell/: index.ts
ViewportEngine/: DataTableView.tsx  FlameGraph2DView.tsx  FlameGraph3DView.tsx  LineChartView.tsx  index.ts
ViewportEngine/FlameGraph3D/: MockFlameGraph3D.tsx  index.ts
components/UI/shared/: LoadingSpinner.tsx
cpu-tools/: .gitignore  COMBINED_PROFILER.md  Makefile  combined_profiler.py
cpu-tools/tests/: test_multithread.c
cupti_trace/: Makefile  README.md  cupti_trace.cpp  cupti_trace_print.h
documents/: CORRELATION_UPROBE_IMPLEMENTATION.md  DESIGN_PROPOSAL.md  UNIVERSAL_REALTIME_PROFILER_DESIGN.md  intro.md  test_correlation_uprobe.bt
documents/custom-example/: .gitignore  Makefile  README.md  example_tailcall.c  go.mod  go.sum  main.go  simple_reporter.go
documents/custom-example/test/: test_program.c
documents/design/: profile-tools-limitation.md
documents/example/: gpu_centered.folded  gpu_final.txt
documents/frontend/: ARCHITECTURE.md  DESIGN_ARCHITECTURE.md  DESIGN_DOCUMENTS_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TESTING_PLAN.md  UI_UX_DESIGN.md  api.md
documents/go-ebpf-example/: .gitignore  Makefile  README.md  counter.c  example.cpp  go.mod  go.sum  main.go
documents/pc_sampling_start_stop/: .gitignore  Makefile  PC_SAMPLING_VISUALIZATION_GUIDE.md  pc_sampling_start_stop.cu
documents/server/backend/: design.md
documents/server/frontend/: UI_UX_DESIGN.md  USER_GUIDE.md
documents/tools/: parca_arch.md
documents/tools/samples/: pmumon_advanced.c  pmumon_basic.c
documents/uprobe-example/: README.md
frontend/: README.md  package.json  pnpm-lock.yaml  threejs_flamegraph.html  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/3d-flame-graph/: README.md  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/3d-flame-graph/src/: App.tsx
frontend/demo/: control_plane.html  flamegraph_data_loader.js
frontend/src/: App.tsx  index.css
frontend/src/AnalyzerEngine/: DynamicAnalyzer.tsx  FlameGraphAnalyzer.tsx  index.ts
gpu-tools/cupti_trace/: .gitignore  Makefile  README.md  README.txt  cupti_trace_injection.cpp  cupti_trace_parser.py  gpuperf.py  helper_cupti_activity.h  merge_gpu_centered.py  merge_gpu_cpu_trace.py  test_cupti.cu  usage.txt
gpu-tools/test/: .gitignore  Makefile  complex_target.cu  deviceQuery.cu  matrixMul.cu  vectorAdd.cu
new-profiler/: .gitignore  Makefile  README.md  UPROBE_FINDINGS.md  UPROBE_TEST_COMPLETE.md  embedded_resources.go  go.mod  go.sum  main.go  simple_uprobe_reporter.go
new-profiler/correlation/: strategy.go
new-profiler/event/: event.go
new-profiler/output/: folded.go
new-profiler/symbolizer/: symbolizer.go
new-profiler/utils/: cuda.go
profiler/: .gitignore  Makefile  README.md  correlation.go  correlation_uprobe_attach.go  cuda_kernel_uprobe_attach.go  cuda_utils.go  cupti_parser.go  cupti_uprobe_attach.go  debug.go  embedded_resources.go  go.mod  go.sum  main.go  simple_reporter.go  symbolizer.go  test_malloc.c  uprobe_interface.go
profiler/ebpf/: correlation_uprobe.ebpf.c
profiler/src/: event.rs  main.rs
profiler/uprobe-example/: main.go
src/: .gitignore  Makefile  arg_parse.h  args_parser.cpp  args_parser.hpp  bpf_event.h  collector_interface.hpp  combine_profile.py  common.h  config.hpp  flamegraph_generator.cpp  flamegraph_generator.hpp  main.cpp  offcputime.bpf.c  offcputime.c  offcputime.cpp  offcputime.h  offcputime.hpp  profile.bpf.c  profile.c  profile.cpp  profile.h  profile.hpp  sampling_common.hpp  sampling_printer.hpp  utils.cpp  utils.hpp
src/analyzers/: analyzer.hpp  analyzer_config.hpp  base_analyzer.cpp  base_analyzer.hpp  flamegraph_view.cpp  flamegraph_view.hpp  offcputime_analyzer.hpp  profile_analyzer.hpp  symbol_resolver.cpp  symbol_resolver.hpp  wallclock_analyzer.cpp  wallclock_analyzer.hpp
src/collectors/: collector_interface.hpp  config.hpp  sampling_data.hpp  sampling_printer.hpp  utils.hpp
src/server/: README.md  api_handler.cpp  api_handler.hpp  config.hpp  frontend_handler.cpp  frontend_handler.hpp  main.cpp  profile_server.cpp  profile_server.hpp
test/: Makefile
test/cpu-minimal/: .gitignore  Makefile  test_malloc.c
test/cuda-minimal/: Makefile  merged_trace.folded  vectorAdd.cu
test/cuda-program/: .gitignore  bandwidthTest.cu  deviceQuery.cu  helper_cuda.h
test/mock-app/: .gitignore  Makefile  README.md  cuda_graph_simple.cu  vectorAdd.cu
test/pytorch/: pytorch_longer.py  pytorch_minimal.py
tests/: README.md  test_api.sh  test_flamegraph_view.cpp  test_main.cpp  test_offcputime_collector.cpp  test_profile_collector.cpp
tools/: .gitignore  Makefile  README.md  UVM_TRACING_DESIGN.md  combined_profiler.py  common.h  find_nvidia_symbols.py  find_untested_functions.py  nvidia_traceable_functions.txt  offcputime.bpf.c  offcputime.c  profile.bpf.c  profile.c  run_all_nvidia_tests.py  untested_functions.txt
tools/bpftrace-script/: TEST_RESULTS.md  test_nv.bt  test_nv_1.bt  test_nv_2.bt  test_nv_drm.bt  test_nvidia.bt  test_nvkms.bt  test_nvuvm.bt  test_top5_untested.bt  test_untested_1.bt  test_untested_2.bt  test_uvm.bt  test_uvm_1.bt  test_uvm_2.bt  test_uvm_3.bt  test_uvm_4.bt
tools/function-script/: README_uvm_va_block_select_residency.md  trace_uvm_perf_prefetch_get_hint.bt  trace_uvm_perf_thrashing_get_hint_simple.bt  trace_uvm_va_block_select_residency.bt
tools/tests/: run_memory_bandwidth.sh  run_multithread_test.sh  test_combined.c  test_multithread.c
(+87 files in other folders)
